--- a/index.html
+++ b/index.html
@@ -1,197 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Starbucks Coffee Company</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <nav class="navbar">
-        <div class="navbar-container">
-            <div class="navbar-brand">
-                <a href="index.html">
-                    <img src="./img/logo.svg" alt="Starbucks">
-                </a>
-            </div>
-
-            <ul class="navbar-nav-left">
-                <li>
-                    <a href="#">Menu</a>
-                </li>
-
-                <li>
-                    <a href="#">Rewards</a>
-                </li>
-
-                <li>
-                    <a href="#">Gift Cards</a>
-                </li>
-            </ul>
-
-            <ul class="navbar-nav-right">
-
-                <li>
-                    <a href="#">
-                        <img src="./img/marker.svg" alt="">
-                        <span>Find a store</span>
-                    </a>
-                </li>
-
-                <li><button class="btn btn-dark-outline">Sign In</button></li>
-                <li><button class="btn btn-dark">Join now</button></li>
-
-                
-            </ul>
-
-            <!-- Hamburger Menu -->
-            <button class="hamburger" id="menu-btn" type="button">
-                <span class="hamburger-top"></span>
-                <span class="hamburger-middle"></span>
-                <span class="hamburger-bottom"></span>
-            </button>    
-
+      <div class="navbar-container">
+        <div class="navbar-brand">
+          <a href="index.html">
+            <img src="./img/logo.svg" alt="Starbucks" />
+          </a>
         </div>
+
+        <ul class="navbar-nav-left">
+          <li>
+            <a href="#">Menu</a>
+          </li>
+
+          <li>
+            <a href="#">Rewards</a>
+          </li>
+
+          <li>
+            <a href="#">Gift Cards</a>
+          </li>
+        </ul>
+
+        <ul class="navbar-nav-right">
+          <li>
+            <a href="#">
+              <img src="./img/marker.svg" alt="" />
+              <span>Find a store</span>
+            </a>
+          </li>
+
+          <li><button class="btn btn-dark-outline">Sign In</button></li>
+          <li><button class="btn btn-dark">Join now</button></li>
+        </ul>
+
+        <!-- Hamburger Menu -->
+        <button class="hamburger" id="menu-btn" type="button">
+          <span class="hamburger-top"></span>
+          <span class="hamburger-middle"></span>
+          <span class="hamburger-bottom"></span>
+        </button>
+      </div>
     </nav>
 
     <!-- Mobile Menu -->
 
     <div class="mobile-menu hidden" id="menu">
-        <ul>
-            <li>
-                <a href="#">Menu</a>
-            </li>
+      <ul>
+        <li>
+          <a href="#">Menu</a>
+        </li>
 
-            <li>
-                <a href="#">Rewards</a>
-            </li>
+        <li>
+          <a href="#">Rewards</a>
+        </li>
 
-            <li>
-                <a href="#">Gift Cards</a>
-            </li>
-        </ul>
+        <li>
+          <a href="#">Gift Cards</a>
+        </li>
+      </ul>
 
-        <div class="mobile-menu-bottom">
-            <button class="btn btn-dark-outline">Sign in</button>
-            <button class="btn btn-dark">Join now</button>
+      <div class="mobile-menu-bottom">
+        <button class="btn btn-dark-outline">Sign in</button>
+        <button class="btn btn-dark">Join now</button>
 
-            <div>
-                <a href="#">
-                    <img src="./img/marker.svg" alt="">
-                    <span>Find a store</span>
-                </a>
-            </div>
-
+        <div>
+          <a href="#">
+            <img src="./img/marker.svg" alt="" />
+            <span>Find a store</span>
+          </a>
         </div>
+      </div>
     </div>
 
     <!-- Box A -->
-    
+
     <section class="box box-a bg-primary text-center py-md">
-        <div class="box-inner">
-            <h2 class="text-xl">Jingle all the way to free favourites</h2>
-            <p class="text-md">
-                Join Starbucks® Rewards for delicious deals & exclusive offers.
-                <a href="#">Learn more</a>
-            </p>
-        </div>
+      <div class="box-inner">
+        <h2 class="text-xl">Jingle all the way to free favourites</h2>
+        <p class="text-md">
+          Join Starbucks® Rewards for delicious deals & exclusive offers.
+          <a href="#">Learn more</a>
+        </p>
+      </div>
     </section>
 
     <!-- Box B -->
-   
+
     <section class="box box-b bg-secondary grid-col-2">
-        <img src="img/box-b.png" alt="">
-        <div class="box-text">
-            <h2 class="text-xl">New to the nice list</h2>
-            <p class="text-md">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati ullam praesentium quae iure porro, harum ad? Itaque nesciunt quis, exercitationem libero iste, perspiciatis aut magnam, maxime doloribus aspernatur delectus hic.
-            </p>
-            <a href="#" class="btn btn-light-outline">Order Now</a>
-        </div>
-    </section> 
+      <img src="img/box-b.png" alt="" />
+      <div class="box-text">
+        <h2 class="text-xl">New to the nice list</h2>
+        <p class="text-md">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati
+          ullam praesentium quae iure porro, harum ad? Itaque nesciunt quis,
+          exercitationem libero iste, perspiciatis aut magnam, maxime doloribus
+          aspernatur delectus hic.
+        </p>
+        <a href="#" class="btn btn-light-outline">Order Now</a>
+      </div>
+    </section>
 
     <!-- Box C -->
 
     <section class="box box-c bg-secondary grid-col-2 grid-reversed">
-        <img src="img/box-c.png" alt="">
-        <div class="box-text">
-            <h2 class="text-xl">Merry Moment</h2>
-            <p class="text-md"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae quam quidem dignissimos. Molestiae modi odit quod dignissimos dolor velit provident ipsa minima similique optio consectetur nulla quos laborum, perferendis voluptatibus. </p>
-            <a href="#" class="btn btn-light-outline">Order Now</a>
-        </div>
-    </section> 
+      <img src="img/box-c.png" alt="" />
+      <div class="box-text">
+        <h2 class="text-xl">Merry Moment</h2>
+        <p class="text-md">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
+          quam quidem dignissimos. Molestiae modi odit quod dignissimos dolor
+          velit provident ipsa minima similique optio consectetur nulla quos
+          laborum, perferendis voluptatibus.
+        </p>
+        <a href="#" class="btn btn-light-outline">Order Now</a>
+      </div>
+    </section>
 
     <!-- Box D -->
 
     <section class="box box-d bg-primary grid-col-2">
-        <img src="img/box-d.png" alt="">
-        <div class="box-text">
-            <h2 class="text-xl">Starbucks Thanksgiving Blend</h2>
-            <p class="text-md"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam adipisci blanditiis deserunt aliquid, nulla fuga quam illum perspiciatis maiores repellendus nihil ullam ipsum fugiat harum suscipit enim eaque ea iste? </p>
-            <a href="#" class="btn btn-light-outline">Order Now</a>
-        </div>
-    </section> 
+      <img src="img/box-d.png" alt="" />
+      <div class="box-text">
+        <h2 class="text-xl">Starbucks Thanksgiving Blend</h2>
+        <p class="text-md">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
+          adipisci blanditiis deserunt aliquid, nulla fuga quam illum
+          perspiciatis maiores repellendus nihil ullam ipsum fugiat harum
+          suscipit enim eaque ea iste?
+        </p>
+        <a href="#" class="btn btn-light-outline">Order Now</a>
+      </div>
+    </section>
 
     <!-- Box E -->
 
     <section class="box box-e bg-secondary grid-col-2 grid-reversed">
-        <img src="img/box-e.jpg " alt="">
-        <div class="box-text">  
-            <h2 class="text-md">Fighting hunger this holiday</h2>
-            <p class="text-sm"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, dolorem quo! Beatae vel magni vero harum voluptatum et incidunt sequi esse nam nisi reiciendis autem error voluptates aspernatur, maiores consequatur. </p>
-            <a href="#" class="btn btn-light-outline">Order Now</a>
-        </div>
-    </section> 
+      <img src="img/box-e.jpg " alt="" />
+      <div class="box-text">
+        <h2 class="text-md">Fighting hunger this holiday</h2>
+        <p class="text-sm">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+          dolorem quo! Beatae vel magni vero harum voluptatum et incidunt sequi
+          esse nam nisi reiciendis autem error voluptates aspernatur, maiores
+          consequatur.
+        </p>
+        <a href="#" class="btn btn-light-outline">Order Now</a>
+      </div>
+    </section>
 
     <!-- Box F -->
 
     <section class="box box-f grid-col-2">
-        <div>
-            <img src="img/box-f1.jpg " alt="">
+      <div>
+        <img src="img/box-f1.jpg " alt="" />
 
-            <div class="bg-extra py-lg">
-                <div class="box-text">  
-                    <h2 class="text-md">Let the holiday cheer come to you</h2>
-                    <p class="text-sm"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, dolorem quo!</p>
-                    <a href="#" class="btn btn-dark-outline">Order Now</a>
-                </div>
-            </div>
-
+        <div class="bg-extra py-lg">
+          <div class="box-text">
+            <h2 class="text-md">Let the holiday cheer come to you</h2>
+            <p class="text-sm">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+              dolorem quo!
+            </p>
+            <a href="#" class="btn btn-dark-outline">Order Now</a>
+          </div>
         </div>
+      </div>
 
-        <!-- ------------------- -->
+      <!-- ------------------- -->
 
-        <div>
-            <img src="img/box-f2.jpg " alt="">
+      <div>
+        <img src="img/box-f2.jpg " alt="" />
 
-            <div class="bg-extra py-lg">
-                <div class="box-text">  
-                    <h2 class="text-md">Fighting hunger this holiday</h2>
-                    <p class="text-sm"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, dolorem quo!</p>
-                    <a href="#" class="btn btn-dark-outline">Order Now</a>
-                </div>
-            </div>
-
-        </div>  
+        <div class="bg-extra py-lg">
+          <div class="box-text">
+            <h2 class="text-md">Fighting hunger this holiday</h2>
+            <p class="text-sm">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+              dolorem quo!
+            </p>
+            <a href="#" class="btn btn-dark-outline">Order Now</a>
+          </div>
+        </div>
+      </div>
     </section>
 
     <div class="divider"></div>
 
     <footer class="footer">
-        <div class="footer-container">
-            <div class="social">
-                <a href="#">
-                    <img src="./img/social-spotify.svg" alt="">
-                </a>
-            </div>
-
-            <p>© 2021 Starbucks Coffee Company. All rights reserved.</p>
-
+      <div class="footer-container">
+        <div class="social">
+          <a href="#">
+            <img src="./img/social-spotify.svg" alt="" />
+          </a>
         </div>
+
+        <p>© 2021 Starbucks Coffee Company. All rights reserved.</p>
+      </div>
     </footer>
 
     <script src="./script.js"></script>
-</body>
+  </body>
 </html>
